Make DID creation works
