# src/app.ts
@@ -168,6 +168,7 @@ class App {
 		// Account API
 		app.post('/account', new AccountController().create);
 		app.get('/account', new AccountController().get);
+		app.post('/account/assign', new AccountController().assign);
 
 		// LogTo webhooks
 		app.post('/account/bootstrap', LogToWebHook.verifyHookSignature, new AccountController().bootstrap);
